# TractCloud

./: README.md  pyproject.toml
src/tractcloud/: README_hemisphere.md  __init__.py  __main__.py  cli.py  colors.py  hemisphere.py  inference.py  model_data.py  mrb_writer.py  pipeline.py  progress.py  vtk_io.py
