[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tractcloud"
version = "0.1.0"
description = "Registration-free tractography parcellation using deep learning"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Tengfei Xue", email = "txue4133@uni.sydney.edu.au"},
    {name = "Fan Zhang"},
    {name = "Lauren J. O'Donnell"},
    {name = "Steve Pieper", email = "pieper@isomics.com"},
]
dependencies = [
    "numpy>=1.21",
    "torch>=2.3.1",
    "vtk>=9.0",
    "whitematteranalysis @ git+https://github.com/SlicerDMRI/whitematteranalysis.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tractcloud = "tractcloud.cli:main"

[project.urls]
Homepage = "https://github.com/SlicerDMRI/TractCloud"
Repository = "https://github.com/SlicerDMRI/TractCloud"

[tool.hatch.build.targets.wheel]
packages = ["src/tractcloud"]
